--- a/src/components/Header/CustomHeader.css
+++ b/src/components/Header/CustomHeader.css
@@ -26,6 +26,12 @@
     font-size: 18px;
 }
 
+/* .header-menu-container {
+    border-style: solid;
+    border-width: 1px;
+    border-color: green;
+} */
+
 .header-menu {
     background-color: var(--main-bg-color);
     color: var(--main-font-color);
